working, just making it pretty

--- a/styles/style.css
+++ b/styles/style.css
@@ -88,32 +88,11 @@ p {
     margin: var(--gutter);
 }
   
-footer {
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-    height: var(--footer-height);
-    display: flex;
-    justify-content: flex-end;
-    background-color: var(--color3);
-    box-shadow: var(--shadow);
-}
-  
-  @keyframes pulse {
-    20% {
-      transform: rotate3d(-10, -10, -10, 50deg) scale(1.2);
-    }
 
-    40% {
-        transform: rotate3d(10, 10, -10, 50deg) scale(1);
-    }
 
-    60% {
-        transform: rotate3d(-10, 10, 10, 50deg) scale(1.2);
-      }
 
-    80% {
-        transform: rotate3d(10, 10, 10, 50deg) scale(1);
-    }
-
+ 
+  input:checked + img {
+      
+      border: solid 2px greenyellow;
   }
