--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-
 body {
     /* https://coolors.co/generate and click export -> scss to get the colors to copy and paste below*/
     --color1: hsla(349, 69%, 76%, 1);
@@ -38,8 +37,8 @@ main {
 }
 
 .section {
-    background-color: chartreuse;
-    width: 750px;
+    background-color: lime;
+    width: 550px;
   
     max-width: 80%;
     display: flex;
@@ -51,12 +50,13 @@ main {
     margin-top: 50px;
     margin-bottom: 20px;
     border: solid 2px black;
+    box-shadow: 5px 10px #888888;
 }
 
 header {
     display: flex;
     justify-content: center;
-    background-color: greenyellow;
+    
     height: var(--header-height);
     
 }
@@ -69,9 +69,10 @@ header {
     background-color: yellow;
 }
 .result {
-    background-color: chartreuse;
+    background-color: lime;
     width: 400px;
-    height: 200px;
+    height: 220px;
+    font-size: 25px;
   
     max-width: 80%;
     display: flex;
@@ -83,25 +84,11 @@ header {
     margin-top: 50px;
     margin-bottom: 20px;
     border: solid 2px black;
+    box-shadow: 5px 10px #888888;
 
 }
 
-
-
-
-
-
-
-
-
-
-
-  
-
-
-
- 
-  input:checked + img {
+input:checked + img {
       
-      border: solid 2px greenyellow;
+      border: solid 2px crimson;
   }
